samples/_failures_safe/1761392801_24e05b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_476d4dc2.c: In function ‘main’:
./samples/SAFE/__tmp_476d4dc2.c:137:29: error: missing terminating " character
  137 |             fprintf(stderr, "
      |                             ^
./samples/SAFE/__tmp_476d4dc2.c:137:13: error: expected expression at end of input
  137 |             fprintf(stderr, "
      |             ^~~~~~~
./samples/SAFE/__tmp_476d4dc2.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_476d4dc2.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_476d4dc2.c:137:13: error: expected declaration or statement at end of input
